# djangocms-lightbox2

./: .flake8  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  i18n.yml
djangocms_lightbox2/: __init__.py  admin.py  apps.py  cms_plugins.py  conf.py  models.py
djangocms_lightbox2/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_lightbox2/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_lightbox2/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_lightbox2/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_lightbox2/locale/it/LC_MESSAGES/: django.mo  django.po
djangocms_lightbox2/locale/pt/LC_MESSAGES/: django.mo  django.po
djangocms_lightbox2/migrations/: 0001_initial.py  0002_add_options_fields.py  0003_layout_fields.py  0004_carousel_customization.py  0005_carousel_controls.py  __init__.py
djangocms_lightbox2/static/djangocms_lightbox2/carousel/: carousel.css  carousel.js
djangocms_lightbox2/static/djangocms_lightbox2/filmstrip/: filmstrip.css  filmstrip.js
djangocms_lightbox2/static/djangocms_lightbox2/gallery/: gallery.css  justified.css  justified.js
djangocms_lightbox2/templates/djangocms_lightbox2/includes/: assets.html  assets_js.html
djangocms_lightbox2/templates/djangocms_lightbox2/plugins/: gallery.html  gallery_carousel.html  gallery_grid.html  gallery_justified.html  gallery_masonry.html  image.html
tests/: __init__.py  settings.py  test_assets_template.py  test_conf.py  test_plugins.py
(+3 files in other folders)
