[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocms-lightbox2"
version = "2.11.5"
description = "Django CMS plugin for Lightbox2 with local assets and per-gallery options."
readme = "README.md"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.8"
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4",
  "Framework :: Django CMS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "Django>=3.2",
  "django-cms>=3.9",
  "django-filer>=2.0",
  "easy-thumbnails>=2.8",
]



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["djangocms_lightbox2*"]
exclude = []

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
exclude = ".git|__pycache__|build|dist|\.venv"

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", "__pycache__", "build", "dist", ".venv"]
